log
Fri 22 Mar 2024 12:08:19 AM UTC: 
 exercises.c | 39 ++++++++++++++++++++++++++++++++++++++-
 1 file changed, 38 insertions(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘eliminaElementos’:
exercises.c:88:13: error: comparison between pointer and integer [-Werror]
   88 |     if(dato == elem){
      |             ^~
exercises.c: In function ‘copia_pila’:
exercises.c:106:11: error: implicit declaration of function ‘is_empty’ [-Werror=implicit-function-declaration]
  106 |   while (!is_empty(P1)) {
      |           ^~~~~~~~
exercises.c:115:3: error: implicit declaration of function ‘destroy_stack’ [-Werror=implicit-function-declaration]
  115 |   destroy_stack(auxStack);
      |   ^~~~~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
fdc8a19
Fri 22 Mar 2024 12:14:14 AM UTC: 
 exercises.c | 7 +++----
 1 file changed, 3 insertions(+), 4 deletions(-)
 tests:  1|4
total_score: 10/70
e5d4332
Fri 22 Mar 2024 12:17:14 AM UTC: 
 exercises.c | 19 +++++++++++++++++++
 1 file changed, 19 insertions(+)
In file included from test.c:5:
exercises.c: In function ‘parentesisBalanceados’:
exercises.c:133:11: error: implicit declaration of function ‘isEmpty’ [-Werror=implicit-function-declaration]
  133 |       if (isEmpty(stack) || *(char*)pop(stack) != '(') {
      |           ^~~~~~~
cc1: all warnings being treated as errors
Compilation failed
36529c9
Fri 22 Mar 2024 12:18:15 AM UTC: 
 exercises.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  1|4
total_score: 10/70
54410c9
Fri 22 Mar 2024 10:00:00 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
exercises.c:9:10: fatal error: exercises.h: No such file or directory
    9 | #include "exercises.h"
      |          ^~~~~~~~~~~~~
compilation terminated.
Compilation failed
b43dfb8
Sat 23 Mar 2024 04:52:25 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|4
total_score: 10/70
09d565c
Sat 23 Mar 2024 04:54:14 PM UTC: 
 exercises.c | 1 -
 1 file changed, 1 deletion(-)
 tests:  2|3
total_score: 20/70
78e22b3
Sat 23 Mar 2024 04:55:27 PM UTC: 
 exercises.c | 7 ++-----
 1 file changed, 2 insertions(+), 5 deletions(-)
 tests:  3|2
total_score: 40/70
3e64bab
Sat 23 Mar 2024 04:56:18 PM UTC: 
 exercises.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  0|0
a9358ca
Sat 23 Mar 2024 04:57:49 PM UTC: 
 exercises.c | 11 +++++++----
 1 file changed, 7 insertions(+), 4 deletions(-)
 tests:  2|3
total_score: 20/70
88db9d6
Sat 23 Mar 2024 04:58:07 PM UTC: 
 exercises.c | 7 ++-----
 1 file changed, 2 insertions(+), 5 deletions(-)
 tests:  3|2
total_score: 40/70
98ba642
Sat 23 Mar 2024 05:00:09 PM UTC: 
 exercises.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  0|0
e1f59d0
Sat 23 Mar 2024 05:00:26 PM UTC: 
 exercises.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  3|2
total_score: 40/70
84860cb
Sat 23 Mar 2024 05:02:43 PM UTC: 
 exercises.c | 8 ++++----
 1 file changed, 4 insertions(+), 4 deletions(-)
In file included from test.c:5:
exercises.c: In function ‘parentesisBalanceados’:
exercises.c:130:11: error: implicit declaration of function ‘isEmpty’ [-Werror=implicit-function-declaration]
  130 |       if (isEmpty(stack) || *(char*)pop(stack) != '(') {
      |           ^~~~~~~
cc1: all warnings being treated as errors
Compilation failed
4fb38c8
